== To Do ==
PCI Entity data
Stop Search report progress
Double-sort reverse order
QuickSort excessive stack usage
Make all public fields in data containers into public properties
CPU Usage and IO Usage in processes
Use C# integrated sorting functions
Speed up database writes
Suppress information logs rather that show only error logs
SMART data improvements (icons)
Error log icons
Store general information in database too
Separate hard drives with partitions

== Changes (0.8.0.2) ==
BIOS Version data fixed
Computer-load software lists fix
Overview tab populated
Repopulated options dialogue with new option flags
Enhanced event log restrictions
Startup hanging fixed
Database operation aborting enhancements

== Changes (0.8.0.3) ==
Fixed threads continuing to execute after shutdown
Added tooltips to quick-info to reveal clipped text
Added licensing and about dialogues
Added user manual
Fixed Quicksort errors
Fixed blank unhandled exception boxes
Reason for last shutdown added

== Changes (0.8.0.4) ==
Added dirty flag status to system drive

== Changes (0.8.0.5) ==
Fixed a bug that causes the program to close at startup - ideally needs more attention to see which exception is thrown
Added default weightings for complaints

== Changes (0.8.0.6) ==
Fixed the error 'Value was either too large or too small for a UInt32'
Stopped non-square OEM logos from stretching badly
Fixed order of database search results. Highest first.
(Code internals) Enumeration of sorting orders as Order.Ascending or Order.Descending instead of true/false