@@ -33,6 +33,6 @@ using System.Resources;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("0.8.0.6")]
-[assembly: AssemblyFileVersion("0.8.0.6")]
+[assembly: AssemblyVersion("0.8.0.7")]
+[assembly: AssemblyFileVersion("0.8.0.7")]
 [assembly: NeutralResourcesLanguageAttribute("en-GB")]
